cleaned up code in meal package