@@ -1,30 +1,26 @@
 package com.pasinski.sl.backend.meal;
 
-import com.pasinski.sl.backend.basic.ApplicationConstants;
-import com.pasinski.sl.backend.meal.forms.ReviewForm;
-import com.pasinski.sl.backend.meal.mealIngredientSpecifics.MealIngredientSpecifics;
-import com.pasinski.sl.backend.meal.category.Category;
 import com.pasinski.sl.backend.meal.category.CategoryRepository;
 import com.pasinski.sl.backend.meal.forms.MealForm;
 import com.pasinski.sl.backend.meal.forms.MealResponseBody;
 import com.pasinski.sl.backend.meal.forms.MealResponseBodyExtended;
+import com.pasinski.sl.backend.meal.forms.ReviewForm;
 import com.pasinski.sl.backend.meal.ingredient.Ingredient;
 import com.pasinski.sl.backend.meal.ingredient.IngredientRepository;
+import com.pasinski.sl.backend.meal.mealIngredient.MealIngredient;
+import com.pasinski.sl.backend.meal.mealIngredient.MealIngredientRepository;
 import com.pasinski.sl.backend.meal.review.Review;
 import com.pasinski.sl.backend.meal.review.ReviewRepository;
 import com.pasinski.sl.backend.security.UserSecurityService;
-import com.pasinski.sl.backend.user.AppUserRepository;
 import lombok.AllArgsConstructor;
-
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.HttpClientErrorException;
 
 import java.util.ArrayList;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Objects;
-import java.util.concurrent.atomic.AtomicReference;
+import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
@@ -32,61 +28,19 @@ public class MealService {
     private final MealRepository mealRepository;
     private final CategoryRepository categoryRepository;
     private final IngredientRepository ingredientRepository;
-    private final AppUserRepository appUserRepository;
     private final ReviewRepository reviewRepository;
     private final UserSecurityService userSecurityService;
+    private final MealIngredientRepository mealIngredientRepository;
 
     public List<MealResponseBody> getMeals() {
-        List<Meal> meals = mealRepository.findAll();
-        List<MealResponseBody> mealResponseBodies = new ArrayList<>();
-
-        meals.forEach(meal -> {
-            mealResponseBodies.add(new MealResponseBody(
-                    meal.getIdMeal(),
-                    meal.getName(),
-                    ApplicationConstants.DEFAULT_MEAL_IMAGE_URL_WITH_PARAMETER + meal.getIdMeal(),
-                    meal.getIngredients().keySet().stream().map(Ingredient::getName).toList(),
-                    meal.getCategories().stream().map(Category::getName).toList(),
-                    meal.getAvgRating(),
-                    meal.getMealExtention().getProteinRatio(),
-                    meal.getTimesUsed()
-        ));
-        });
-
-        return mealResponseBodies;
+        return mealRepository.findAll().stream().map(MealResponseBody::new).collect(Collectors.toList());
     }
 
     public Long addMeal(MealForm mealForm) {
-        Meal meal = new Meal();
+        if(mealForm.getCategoriesIds() == null || mealForm.getCategoriesIds().isEmpty())
+            mealForm.setCategoriesIds(List.of(0L));
 
-        HashMap<Ingredient, MealIngredientSpecifics> ingredients = new HashMap<>();
-        mealForm.getIngredients().forEach((id, amount) -> {
-            MealIngredientSpecifics mealIngredientSpecifics = new MealIngredientSpecifics();
-            Ingredient ingredient = ingredientRepository.findById(id).orElseThrow(() -> new HttpClientErrorException(HttpStatus.NOT_FOUND));
-            mealIngredientSpecifics.setInitialWeight(amount);
-            ingredients.put(ingredient, mealIngredientSpecifics);
-        });
-
-        meal.setName(mealForm.getName());
-        meal.setIngredients(ingredients);
-
-        meal.getMealExtention().setRecipe(mealForm.getRecipe());
-        meal.getMealExtention().setTimeToPrepare(mealForm.getTimeToPrepare());
-
-        if(mealForm.getCategoriesIds() != null)
-            meal.setCategories(categoryRepository.findAllById(mealForm.getCategoriesIds()));
-
-        if(mealForm.getImageName() != null)
-            meal.setImageName(mealForm.getImageName());
-
-
-        meal.setAuthor(appUserRepository.findById(userSecurityService.getLoggedUserId()).orElseThrow(() -> new HttpClientErrorException(HttpStatus.NOT_FOUND)));
-        meal.setInitialCalories();
-        calculateProteinRatioOfAMeal(meal);
-        assignCategoriesAutomatically(meal);
-        mealRepository.save(meal);
-
-        return meal.getIdMeal();
+        return mealRepository.save(new Meal(mealForm, getMealIngredientsFromMealForm(mealForm), categoryRepository.findAllById(mealForm.getCategoriesIds()), userSecurityService.getLoggedUser())).getIdMeal();
     }
 
 
@@ -110,38 +64,14 @@ public class MealService {
         if (!Objects.equals(meal.getAuthor().getIdUser(), userSecurityService.getLoggedUserId()))
             throw new HttpClientErrorException(HttpStatus.FORBIDDEN);
 
-        if(mealForm.getName() != null)
-            meal.setName(mealForm.getName());
+        if(mealForm.getCategoriesIds() == null || mealForm.getCategoriesIds().isEmpty())
+            mealForm.setCategoriesIds(List.of(0L));
 
-        if(mealForm.getIngredients() != null) {
-            HashMap<Ingredient, MealIngredientSpecifics> ingredients = new HashMap<>();
-            mealForm.getIngredients().forEach((id, amount) -> {
-                Ingredient ingredient = ingredientRepository.findById(id).orElseThrow(() -> new HttpClientErrorException(HttpStatus.NOT_FOUND));
-                MealIngredientSpecifics mealIngredientSpecifics = new MealIngredientSpecifics();
-                mealIngredientSpecifics.setInitialWeight(amount);
-                ingredients.put(ingredient, mealIngredientSpecifics);
-            });
-            meal.setIngredients(ingredients);
-            meal.setInitialCalories();
-            calculateProteinRatioOfAMeal(meal);
-        }
-
-        if(mealForm.getRecipe() != null)
-            meal.getMealExtention().setRecipe(mealForm.getRecipe());
-
-        if(mealForm.getTimeToPrepare() != null)
-            meal.getMealExtention().setTimeToPrepare(mealForm.getTimeToPrepare());
-
-        if(mealForm.getCategoriesIds() != null) {
-            meal.setCategories(categoryRepository.findAllById(mealForm.getCategoriesIds()));
-            assignCategoriesAutomatically(meal);
-        }
-
-        if(mealForm.getImageName() != null)
-            meal.setImageName(mealForm.getImageName());
+        meal.modify(mealForm, getMealIngredientsFromMealForm(mealForm), categoryRepository.findAllById(mealForm.getCategoriesIds()));
 
         mealRepository.save(meal);
     }
+
     public void deleteMeal(Long idMeal) {
         Meal meal = mealRepository.findById(idMeal).orElseThrow(() -> new HttpClientErrorException(HttpStatus.NO_CONTENT));
 
@@ -157,17 +87,16 @@ public class MealService {
         return new MealResponseBodyExtended(meal, meal.getMealExtention());
     }
 
-    private void calculateProteinRatioOfAMeal(Meal meal) {
-        AtomicReference<Float> gramsOfProtein = new AtomicReference<>(0F);
+    private List<MealIngredient> getMealIngredientsFromMealForm(MealForm mealForm) {
+        List<MealIngredient> ingredients = new ArrayList<>();
+        Integer mealWeight = mealForm.getIngredients().values().stream().reduce(0, Integer::sum);
 
-        meal.getIngredients().forEach((ingredient, mealIngredientSpecifics) -> {
-            gramsOfProtein.updateAndGet(v -> v + ingredient.getProteinPer100g() * mealIngredientSpecifics.getInitialWeight() / 100F);
+        mealForm.getIngredients().forEach((id, amount) -> {
+            Ingredient ingredient = ingredientRepository.findById(id).orElseThrow(() -> new HttpClientErrorException(HttpStatus.NOT_FOUND));
+            MealIngredient mealIngredient = new MealIngredient(ingredient, amount, mealWeight);
+            ingredients.add(mealIngredient);
         });
 
-        meal.getMealExtention().setProteinRatio((int) (gramsOfProtein.get() *4/meal.getInitialCalories() * 100));
-    }
-
-    private void assignCategoriesAutomatically(Meal meal) {
-        //TODO
+        return ingredients;
     }
 }
